@@ -9,6 +9,7 @@ from plone.supermodel import model
 from unittest2 import TestCase
 from zope.interface import implements
 from zope.interface import Interface
+import ftw.keywordwidget.tests.widget
 import transaction
 
 
